# Pong

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  build.sh  main.cpp
client/src/: ball.cpp  game.cpp  network.cpp  paddle.cpp
pong_client/: CMakeLists.txt  build.sh  main.cpp
pong_client/src/: ball.cpp  game.cpp  network.cpp
pong_client/src/include/: game.hpp  network.hpp  paddle.hpp
pong_server/: CMakeLists.txt  build.sh  main.c  server.cpp  testclient.cpp
server/: CMakeLists.txt  server.cpp
src/: ball.cpp  game.cpp  paddle.cpp
src/include/: ball.hpp  game.hpp  paddle.hpp
